cabal-version:      3.0
name:               arkanoid
version:            0.1.0.0
synopsis:           Classic Arkanoid game in Haskell
license:            MIT
build-type:         Simple

executable arkanoid
    main-is:          Main.hs
    other-modules:    Types
                    , Constants
                    , Logic
                    , Render
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Werror -O2
    build-depends:    base    >= 4.14 && < 5
                    , gloss   >= 1.13 && < 2
